ros2_ws/log/build_2023-12-28_11-53-40/mypkg/stderr.log
  File "/home/akira/ros2_2023/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 6
    if request.name = "大本聖":
                    ^
SyntaxError: invalid syntax

